[project]
name = "reasoning-bank"
version = "0.1.0"
description = "Persistent agent memory SDK with induction, retrieval, and scaling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "mcp>=1.0.0",
    "httpx>=0.28.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]
# WebArena research dependencies (not needed for SDK)
webarena = [
    "browsergym-core==0.14.1",
    "browsergym-experiments==0.14.1",
    "browsergym-webarena==0.14.1",
    "browsergym==0.14.1",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.19",
    "langchain-community>=0.3.26",
    "langchain-openai>=1.1.11",
    "pillow>=11.2.1",
    "torch>=2.7.0",
]

[project.scripts]
reasoning-bank-mcp = "reasoning_bank_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasoning_bank", "reasoning_bank_api", "reasoning_bank_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle - docstring style (too noisy)
    "ANN",     # flake8-annotations - type annotations (separate effort)
    "CPY001",  # missing copyright notice
    "INP001",  # implicit namespace package
    "DOC",     # docstring formatting rules
    "COM812",  # trailing comma (conflicts with ruff formatter)
    "ISC001",  # implicitly concatenated string literals (conflicts with ruff formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # assert in tests is fine
    "PLR2004", # magic numbers in tests are fine
    "ARG",     # unused arguments in test fixtures
    "PT",      # pytest style (some tests use assert directly)
    "S",       # security issues (hardcoded values etc.)
    "FBT",     # boolean trap in tests
    "SLF",     # private member access in tests
]
"docker/tests/*" = [
    "S101",    # assert in tests is fine
    "PLR2004", # magic numbers in tests are fine
    "S",       # security issues (subprocess, hardcoded values etc.)
    "ARG",     # unused arguments in test fixtures
    "PT",      # pytest style
    "FBT",     # boolean trap in tests
    "SLF",     # private member access in tests
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.15",
]
